# neomacs

./: .gitignore  Cargo.toml  README.md  TAGGED_POINTER_CONVERSION_GUIDE.md  configure.ac  flake.nix  perf.data.old
neomacs-bin/: Cargo.toml
neomacs-bin/src/: args.rs  args_test.rs  input_bridge.rs  input_bridge_test.rs  lib.rs  main.rs  main_test.rs  tty_frontend.rs  tty_frontend_test.rs
neomacs-bin/tests/: argv_parity.rs
neomacs-display/: Cargo.toml  build.rs
neomacs-display-protocol/: Cargo.toml
neomacs-display-protocol/src/: effect_config.rs  effect_config_test.rs  face.rs  face_test.rs  frame_content.rs  frame_glyphs.rs  frame_glyphs_test.rs  glyph_matrix.rs  glyph_matrix_test.rs  gradient.rs  lib.rs  scene.rs  scene_test.rs  scroll_animation.rs  scroll_animation_test.rs  transition_policy.rs  tty_rif.rs  tty_rif_test.rs  types.rs  types_test.rs  ui_types.rs
neomacs-display-runtime/: Cargo.toml  build.rs
neomacs-display-runtime/examples/: winit_probe.rs
neomacs-display-runtime/src/: lib.rs  lib_test.rs  thread_comm.rs  thread_comm_test.rs  window_icon.rs
neomacs-display/include/: neomacs_display.h
neomacs-display/src/: font_match.rs  lib.rs
neomacs-layout-engine/: Cargo.toml
neomacs-layout-engine/src/: bidi_layout.rs  bidi_layout_test.rs  display_backend.rs  display_backend_test.rs  display_iterator.rs  display_iterator_test.rs  display_pixel_calc.rs  display_pixel_calc_test.rs  display_status_line.rs  display_status_line_test.rs  emacs_ffi.rs  emacs_types.rs  engine.rs  engine_test.rs  font_loader.rs  font_match.rs  font_match_test.rs  font_metrics.rs  font_metrics_test.rs  fontconfig.rs  fontconfig_test.rs  gui_chrome.rs  gui_chrome_test.rs  hit_test.rs  lib.rs  matrix_builder.rs  matrix_builder_test.rs  neovm_bridge.rs  neovm_bridge_test.rs  status_line.rs  tty_menu_bar.rs  tty_menu_bar_test.rs  types.rs  types_test.rs  unicode.rs  unicode_test.rs  window_output.rs  window_output_test.rs
neomacs-renderer-wgpu/: Cargo.toml
neomacs-renderer-wgpu/src/: external_buffer.rs  external_buffer_test.rs  glyph_atlas.rs  glyph_atlas_test.rs  image_cache.rs  image_cache_test.rs  lib.rs  overlay_state.rs  overlay_state_test.rs  va_dmabuf_export.rs  vertex.rs  vertex_test.rs  video_cache.rs  video_cache_test.rs  vulkan_dmabuf.rs  vulkan_dmabuf_test.rs  webkit_cache.rs  xbm.rs  xbm_test.rs  xpm.rs  xpm_test.rs
neomacs-tui-tests/: Cargo.toml
neomacs-tui-tests/src/: lib.rs
neomacs-tui-tests/tests/: basic.rs  buffers.rs  child_frames.rs  common_editing.rs  common_org.rs  common_programming.rs  common_project.rs  common_source_navigation.rs  common_usage.rs  compare_basic.rs  editing_motion.rs  eval_elisp.rs  files_dired.rs  help_describe.rs  mark_region_fill.rs  modes.rs  registers_bookmarks.rs  replace_sort.rs  saving_insert.rs  search.rs  shell_compile.rs  windows_tabs.rs
neovm-core/: Cargo.toml  build.rs  dump.pdmp  link.txt  x
neovm-core/build_support/: unicode_gen.rs
neovm-core/examples/: compat_runner.rs  introspection_bench.rs  load_cache_bench.rs
neovm-core/src/: encoding.rs  encoding_test.rs  face.rs  face_test.rs  gc_trace.rs  heap_types.rs  heap_types_marker_test.rs  keyboard.rs  keyboard_test.rs  lib.rs  lib_test.rs  logging.rs  test_utils.rs  window.rs
neovm-core/tests/: compat_advice_place_semantics.rs  compat_advice_stack_semantics.rs  compat_bootstrap_gc_smoke.rs  compat_bootstrap_macro_semantics.rs  compat_bootstrap_runtime_core_surface.rs  compat_bootstrap_runtime_loaddefs_surface.rs  compat_bootstrap_runtime_state.rs  compat_buffer_locals_semantics.rs  compat_buffer_semantics.rs  compat_buffer_switch_semantics.rs  compat_category_semantics.rs  compat_command_key_history_semantics.rs  compat_default_lexical_binding_semantics.rs  compat_delete_frame_semantics.rs  compat_eval_after_load_semantics.rs  compat_eval_internal_environment_surface.rs  compat_eval_special_binding_semantics.rs  compat_face_semantics.rs  compat_face_surface.rs  compat_file_lock_semantics.rs  compat_focus_event_semantics.rs  compat_function_shape_semantics.rs  compat_interpreted_closure_runtime_surface.rs  compat_keymap_semantics.rs  compat_load_semantics.rs  compat_lread_special_binding_semantics.rs  compat_marker_semantics.rs  compat_overlay_insert_semantics.rs  compat_overlay_semantics.rs  compat_pcase_semantics.rs  compat_provide_require_semantics.rs  compat_source_bootstrap_macro_surface.rs  compat_switch_to_buffer_semantics.rs  compat_syntax_table_semantics.rs  compat_text_property_semantics.rs  compat_window_batch_display_semantics.rs  compat_window_display_semantics.rs  compat_window_history_semantics.rs  compat_window_position_semantics.rs  compat_window_semantics.rs  (+2 more)
neovm-gc/: Cargo.toml  DESIGN.md
neovm-gc/benches/: BASELINE.md  README.md  alloc_throughput.rs  barrier_cost.rs  collection_latency.rs  multi_mutator_scaling.rs  workloads.rs
neovm-gc/examples/: bench_alloc_profile.rs  bench_multi_mutator_alloc.rs
neovm-gc/src/: background.rs  barrier.rs  card_table.rs  card_table_test.rs  collector_exec.rs  collector_exec_test.rs  collector_policy.rs  collector_policy_test.rs  collector_session.rs  collector_session_test.rs  collector_state.rs  collector_state_test.rs  concurrent_marker.rs  descriptor.rs  descriptor_test.rs  edge.rs  edge_test.rs  heap.rs  index_state.rs  index_state_test.rs  lib.rs  lib_test.rs  mark.rs  mark_test.rs  mutator.rs  object.rs  object_store.rs  object_test.rs  pacer.rs  pacer_test.rs  pause_stats.rs  pause_stats_test.rs  plan.rs  reclaim.rs  reclaim_test.rs  root.rs  root_test.rs  runtime.rs  runtime_state.rs  runtime_state_test.rs  (+4 more)
neovm-gc/tests/: public_api.rs
neovm-oracle-tests/: Cargo.toml
neovm-oracle-tests/src/: abbrev-comprehensive-patterns.rs  advice-advanced.rs  advice-comprehensive-patterns.rs  advice-patterns-advanced.rs  advice.rs  alist-get.rs  alist-operations-advanced-patterns.rs  alist-operations-comprehensive.rs  alist-operations.rs  and.rs  apply-advanced.rs  apply-funcall-advanced.rs  apply-funcall-patterns.rs  apply.rs  aref-aset.rs  arithmetic-advanced.rs  assoc.rs  (+708 more)
neovm-worker/: Cargo.toml
(+1151 files in other folders)
