[workspace]
members = [
    "neomacs-bin",
    "neomacs-display",
    "neovm-core",
    "neovm-host-abi",
    "neovm-worker",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Eval Exec <execvy@gmail.com>"]
license = "GPL-3.0-or-later"

[workspace.dependencies]
# Internal crates
neovm-core = { path = "neovm-core", default-features = false }
neovm-host-abi = { path = "neovm-host-abi" }
neomacs-display = { path = "neomacs-display", default-features = false }

# Logging / tracing
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency & threading
crossbeam-channel = "0.5"

# FFI / system
libc = "0.2"

# Crypto
sha1 = "0.10"
sha2 = "0.10"

# Misc
regex = "1"
strum = { version = "0.26", features = ["derive"] }
stacker = "0.1"
dns-lookup = "2"
network-interface = "2"
libloading = "0.8"
thiserror = "2.0"
once_cell = "1.19"
cfg-if = "1.0"
bitflags = "2.0"
bytemuck = { version = "1.18", features = ["derive"] }
image = "0.24"

# GPU / windowing
winit = "0.30"
wgpu = "28"
wgpu-hal = { version = "28", features = ["vulkan"] }
raw-window-handle = "0.6"
ash = "0.38"
pollster = "0.4"
resvg = "0.44"
cosmic-text = "0.12"
fontdb = "0.16"
arboard = "3.4"

# GStreamer (video)
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-app = "0.23"
gstreamer-allocators = "0.23"

# Terminal emulation
alacritty_terminal = "0.25"
parking_lot = "0.12"
portable-pty = "0.9"

# Build dependencies
cbindgen = "0.27"
which = "7.0"
bindgen = "0.71"
pkg-config = "0.3"

# OS pipe
os_pipe = "1.1"

# Windows
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes"] }

# Dev / test
proptest = "1.6"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
