[workspace]
members = [
    "neomacs-bin",
    "neomacs-display-runtime",
    "neomacs-display-protocol",
    "neomacs-layout-engine",
    "neomacs-renderer-wgpu",
    "neovm-gc",
    "neovm-core",
    "neovm-host-abi",
    "neovm-oracle-tests",
    "neovm-worker",
    "xtask",
]
default-members = ["neomacs-bin"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Eval Exec <execvy@gmail.com>"]
license = "GPL-3.0-or-later"

[workspace.dependencies]
# Internal crates
neovm-core = { path = "neovm-core", version = "0.0.1", default-features = false }
neovm-gc = { path = "neovm-gc", version = "0.0.1" }
neovm-host-abi = { path = "neovm-host-abi", version = "0.0.1" }
neovm-oracle-tests = { path = "neovm-oracle-tests", version = "0.0.1" }
neomacs-display-runtime = { path = "neomacs-display-runtime", version = "0.0.1", default-features = false }
neomacs-display-protocol = { path = "neomacs-display-protocol", version = "0.0.1", default-features = false }
neomacs-layout-engine = { path = "neomacs-layout-engine", version = "0.0.1", default-features = false }
neomacs-renderer-wgpu = { path = "neomacs-renderer-wgpu", version = "0.0.1", default-features = false }

# Logging / tracing
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-log = "0.2"
tracing-appender = "0.2"

# Concurrency & threading
crossbeam-channel = "0.5"

# FFI / system
libc = "0.2"

# Crypto
sha1 = "0.10"
sha2 = "0.10"

# Misc
regex = "1"
rustc-hash = "2"
strum = { version = "0.26", features = ["derive"] }
stacker = "0.1"
dns-lookup = "2"
hostname = "0.4"
network-interface = "2"
libloading = "0.8"
fontconfig = "0.10.0"
yeslogic-fontconfig-sys = "6.0.0"
x11-dl = "2.21"
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "2.0"
once_cell = "1.19"
cfg-if = "1.0"
bitflags = "2.0"
bytemuck = { version = "1.18", features = ["derive"] }
image = "0.24"
allsorts = "0.16.1"

# Arbitrary precision integers (bignum support).
# Uses GMP under the hood, mirroring GNU Emacs's bignum.c which also
# wraps GMP. We disable rug's default features so only the `integer`
# module is built — we don't need MPFR (rationals/floats) here, since
# elisp bignums are integers and elisp floats stay as f64.
rug = { version = "1", default-features = false, features = ["integer", "std"] }
# We pin gmp-mpfr-sys (rug's underlying FFI crate) so we can enable its
# `use-system-libs` feature, which links against the libgmp shipped by
# our nix devShell instead of building GMP from source. Building GMP
# from source needs `m4` in PATH which the devShell doesn't ship.
gmp-mpfr-sys = { version = "1.7", default-features = false, features = ["use-system-libs"] }

# GPU / windowing
winit = "0.30"
wgpu = "28"
wgpu-hal = { version = "28", features = ["vulkan"] }
raw-window-handle = "0.6"
ash = "0.38"
pollster = "0.4"
resvg = "0.44"
cosmic-text = "0.18.2"
fontdb = "0.23"
ttf-parser = "0.25"
arboard = "3.4"

# GStreamer (video)
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-app = "0.23"
gstreamer-allocators = "0.23"

# Terminal emulation
alacritty_terminal = "0.25"
parking_lot = "0.12"
portable-pty = "0.9"
smallvec = "1.13"

# Build dependencies
cbindgen = "0.27"
which = "7.0"
bindgen = "0.71"
pkg-config = "0.3"

# OS pipe
os_pipe = "1.1"

# I/O multiplexing (epoll/kqueue/wepoll)
polling = "3"

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "0.26"
rustls-pki-types = "1"

# Windows
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes"] }

# Dev / test
proptest = "1.6"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
debug = true

[patch.crates-io]
cosmic-text = { git = "https://github.com/eval-exec/cosmic-text", rev = "5dd3fec8572e771794e3f203ab6780d828e9ce09" }
