[package]
name = "neomacs-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Standalone Rust binary for Neomacs (no C dependency)"

[[bin]]
name = "neomacs"
path = "src/main.rs"

[dependencies]
neomacs-display = { workspace = true, features = ["core-backend-rust"] }
neovm-core = { workspace = true, features = ["core-backend-rust"] }

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
crossbeam-channel.workspace = true
libc.workspace = true
