[package]
name = "neomacs-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Standalone Rust binary for Neomacs (no C dependency)"

[features]
default = []
neo-term = ["neomacs-display-runtime/neo-term"]

[[bin]]
name = "neomacs"
path = "src/main.rs"
test = false

[[bin]]
name = "neomacs-temacs"
path = "src/bin/neomacs-temacs.rs"
test = false

[[bin]]
name = "bootstrap-neomacs"
path = "src/bin/bootstrap-neomacs.rs"
test = false

[[bin]]
name = "mock-display"
path = "src/bin/mock-display.rs"
test = false


[dependencies]
neomacs-display-protocol.workspace = true
neomacs-display-runtime = { workspace = true, default-features = false }
neomacs-layout-engine.workspace = true
neovm-core.workspace = true

# Utilities
tracing.workspace = true
crossbeam-channel.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
stacker.workspace = true
