[package]
name = "neomacs-display-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust runtime display engine for Neomacs"
repository = "https://github.com/eval-exec/neomacs-1"

[dependencies]
# Text rendering - Pure Rust stack
cosmic-text.workspace = true
fontdb.workspace = true
ttf-parser.workspace = true

# Vulkan for DMA-BUF import (WPE WebKit integration)
ash.workspace = true

# GStreamer for video
gstreamer = { workspace = true, optional = true }
gstreamer-video = { workspace = true, optional = true }
gstreamer-app = { workspace = true, optional = true }
gstreamer-allocators = { workspace = true, optional = true }

# Winit + wgpu backend (always enabled)
winit.workspace = true
wgpu.workspace = true
wgpu-hal.workspace = true
raw-window-handle.workspace = true
arboard.workspace = true
bytemuck.workspace = true
pollster.workspace = true

# Image decoding (async)
image.workspace = true

# SVG rendering (pure Rust, no C deps)
resvg.workspace = true

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
thiserror.workspace = true
bitflags.workspace = true
once_cell.workspace = true
cfg-if.workspace = true

# Thread communication
crossbeam-channel.workspace = true
os_pipe.workspace = true

# FFI / system
libc.workspace = true

# NeoVM Elisp evaluator
neovm-core.workspace = true
neomacs-display-protocol.workspace = true
neomacs-layout-engine.workspace = true
neomacs-renderer-wgpu.workspace = true

# Terminal emulation (neo-term)
alacritty_terminal = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
portable-pty = { workspace = true, optional = true }

[build-dependencies]
bindgen.workspace = true
pkg-config.workspace = true

[features]
# Default: all features enabled
default = ["video", "neo-term", "core-backend-rust"]
# Core backend selection
core-backend-emacs-c = [
    "neovm-core/core-backend-emacs-c",
    "neomacs-layout-engine/core-backend-emacs-c",
    "neomacs-renderer-wgpu/core-backend-emacs-c",
]
core-backend-rust = [
    "neovm-core/core-backend-rust",
    "neomacs-layout-engine/core-backend-rust",
    "neomacs-renderer-wgpu/core-backend-rust",
]
tty-backend = []
# Video with GStreamer
video = [
    "gstreamer",
    "gstreamer-video",
    "gstreamer-app",
    "gstreamer-allocators",
    "neomacs-renderer-wgpu/video",
]
# WPE WebKit integration
wpe-webkit = ["neomacs-renderer-wgpu/wpe-webkit"]
# GPU-accelerated terminal emulator
neo-term = [
    "alacritty_terminal",
    "parking_lot",
    "portable-pty",
    "neomacs-display-protocol/neo-term",
    "neomacs-layout-engine/neo-term",
]

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
