[package]
name = "neomacs-layout-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust layout engine crate for Neomacs"

[features]
default = []
neo-term = ["neomacs-display-protocol/neo-term"]

[dependencies]
neomacs-display-protocol = { workspace = true }
neovm-core.workspace = true
cosmic-text.workspace = true
fontdb.workspace = true
tracing.workspace = true
once_cell.workspace = true
ttf-parser.workspace = true
allsorts.workspace = true

[target.'cfg(unix)'.dependencies]
fontconfig.workspace = true
yeslogic-fontconfig-sys.workspace = true
x11-dl.workspace = true
