[package]
name = "neovm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core runtime structures for NeoVM"

[dependencies]
neovm-host-abi.workspace = true
crossbeam-channel.workspace = true
libc.workspace = true
regex.workspace = true
rustc-hash.workspace = true
sha1.workspace = true
sha2.workspace = true
strum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
tracing-appender.workspace = true
stacker.workspace = true
dns-lookup.workspace = true
hostname.workspace = true
network-interface.workspace = true
libloading.workspace = true
tree-sitter.workspace = true
tree-sitter-language.workspace = true
serde.workspace = true
bincode.workspace = true
tempfile.workspace = true
polling.workspace = true
portable-pty.workspace = true
smallvec.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
rustls-pki-types.workspace = true
arboard.workspace = true
parking_lot.workspace = true
rug.workspace = true
gmp-mpfr-sys.workspace = true

[features]
default = []

[dev-dependencies]
proptest.workspace = true

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
