[package]
name = "neovm-gc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Standalone managed-heap crate for VM runtimes: generational, parallel-in-the-nursery, concurrent old-gen marker, opt-in physical compaction, Go-style adaptive pacer."
keywords = ["gc", "garbage-collector", "memory", "vm", "runtime"]
categories = ["memory-management"]

[dependencies]
bitflags.workspace = true
crossbeam-deque.workspace = true
