[package]
name = "neovm-gc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Standalone managed-heap crate for VM runtimes: generational, parallel-in-the-nursery, concurrent old-gen marker, opt-in physical compaction, Go-style adaptive pacer."
keywords = ["gc", "garbage-collector", "memory", "vm", "runtime"]
categories = ["memory-management"]

[dependencies]
bitflags.workspace = true
crossbeam-deque.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[[bench]]
name = "alloc_throughput"
harness = false

[[bench]]
name = "barrier_cost"
harness = false

[[bench]]
name = "collection_latency"
harness = false

[[bench]]
name = "multi_mutator_scaling"
harness = false

[[bench]]
name = "workloads"
harness = false
