[package]
name = "neovm-oracle-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Oracle-backed Elisp parity tests for NeoVM"

[dependencies]
neovm-core = { workspace = true }
libc.workspace = true
proptest.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
