[package]
name = "neovm-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Worker runtime and scheduler scaffolding for NeoVM"

[features]
default = ["core-backend-rust"]
core-backend-emacs-c = ["neovm-core/core-backend-emacs-c"]
core-backend-rust = ["neovm-core/core-backend-rust"]

[dependencies]
neovm-core.workspace = true
neovm-host-abi.workspace = true
