[package]
name = "neovm-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Worker runtime and scheduler scaffolding for NeoVM"

[dependencies]
neovm-core.workspace = true
neovm-host-abi.workspace = true
